add input component

--- a/components/inputs/index.html
+++ b/components/inputs/index.html
@@ -10,8 +10,12 @@
     <title>inputs</title>
 </head>
 <body>
-    <div class="div">
-        <input class="input" type="text" placeholder="Title" name="Title">
+    <div class="container">
+        <div class="div">
+            <input class="input" type="text" placeholder="" name="Title" required>
+            <label for="input">Title</label>
+        </div>
+        <a class="clear-btn"></a>
     </div>
 </body>
 </html>
