--- a/components/navigation bar/menuLinks.css
+++ b/components/navigation bar/menuLinks.css
@@ -1,15 +1,16 @@
 .navigation {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    width: 108px;
-    height: 100%;
-
-    background-color: #cecece5b;
+    max-width: 400px;
 }
 
-.logo-mini {
+.navigation .top {
+    padding: 25px 30px;
+}
+
+.logo-full {
+    width: 319px;
+    height: 40px;
     margin-bottom: 40px;
 }
 
@@ -38,12 +39,12 @@
     background-color: #DDBFF7;
 }
 
-.show-panel-active svg path,
-.show-panel-active svg rect {
+.show-panel:active svg path,
+.show-panel:active svg rect {
     fill: #A24DE8;
 }
 
-.show-panel-active {
+.show-panel:active {
     background-color: #DDBFF7;
 }
 
@@ -56,18 +57,21 @@
     fill: #FFFFFF;
 }
 
-/* .navigation__list {
+.navigation__list {
     margin-top: 80px;
-} */
+    margin-bottom: 452px;
+}
 
 .navigation__list-item {
     display: flex;
-    justify-content: center;
     align-items: center;
-    width: 107px;
-    height: 80px;
     transition: all 0.2s ease;
     cursor: pointer;
+    padding: 0 40px;
+}
+
+.navigation__list-item svg {
+    margin-right: 29px;
 }
 
 .navigation__list-item:hover {
@@ -78,6 +82,11 @@
     background-color: #F0E2FB;
     border-right: 1px solid #A24DE8;
     color: #A24DE8;
+}
+
+.navigation__list-item:active svg path,
+.navigation__list-item:active svg rect {
+    fill: #A24DE8;
 }
 
 .active {
@@ -102,10 +111,14 @@
 .book-a-demo {
     display: flex;
     justify-content: center;
+    width: 75%;
     border: 1px solid #DDDDDD;
     padding: 16px;
     border-radius: 8px;
     margin-bottom: 35px;
+
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .book-a-demo span {
@@ -118,12 +131,21 @@
 
     width: 100%;
     padding: 16px 30px;
+
+    cursor: pointer;
+    transition: all 0.3s ease;
 }
 
-.user-name {
-    font-weight: 600;
-    font-size: 14px;
-    line-height: 20px;
+.user:hover {
+    background-color: #EEEEEE;
+}
 
-    margin-left: 16px;
+.user:active {
+    background-color: #F0E2FB;
+    border-right: 1px solid #A24DE8;
+    color: #A24DE8;
+}
+
+.user .avatar {
+    margin-right: 16px;
 }
