--- a/components/popup/index.html
+++ b/components/popup/index.html
@@ -21,10 +21,11 @@
             <div class="popup__content">
                 <div class="popup__container">
                     <h2>Registration</h2>
-                    <a href="#join" class="popup__close"></a>
+                    <a href="#" class="popup__close close-popup"></a>
                 </div>
             </div>
         </div>
     </div>
+    <script src="../../js/popup.js"></script>
 </body>
 </html>
