--- a/components/navigation bar/menuLinks.html
+++ b/components/navigation bar/menuLinks.html
@@ -14,7 +14,7 @@
     <div class="navigation">
         <div class="top">
             <div class="logo-full"></div>
-            <div class="show-panel">
+            <div class="show-btn">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <mask id="mask0_253_3530" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="4" y="5" width="16" height="14">
                     <path fill-rule="evenodd" clip-rule="evenodd" d="M11.2682 6.64018C11.6218 6.2159 11.5645 5.58534 11.1402 5.23177C10.7159 4.87821 10.0853 4.93553 9.73178 5.35981L4.73178 11.3598C4.42274 11.7307 4.42274 12.2693 4.73178 12.6402L9.73178 18.6402C10.0853 19.0645 10.7159 19.1218 11.1402 18.7682C11.5645 18.4147 11.6218 17.7841 11.2682 17.3598L6.80171 12L11.2682 6.64018ZM19.2682 6.64018C19.6218 6.21591 19.5645 5.58534 19.1402 5.23178C18.7159 4.87821 18.0853 4.93554 17.7318 5.35982L12.7318 11.3598C12.4227 11.7307 12.4227 12.2693 12.7318 12.6402L17.7318 18.6402C18.0853 19.0645 18.7159 19.1218 19.1402 18.7682C19.5645 18.4147 19.6218 17.7841 19.2682 17.3598L14.8017 12L19.2682 6.64018Z" fill="#A24DE8"/>
@@ -63,22 +63,25 @@
                 <h4>Company</h4>
             </li>
         </nav>
-        <a class="book-a-demo">
-            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <mask id="mask0_291_2964" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="2" y="2" width="20" height="20">
-                    <path d="M13.5 13C13.5 12.3096 12.9404 11.75 12.25 11.75C11.5596 11.75 11 12.3096 11 13C11 13.6904 11.5596 14.25 12.25 14.25C12.9404 14.25 13.5 13.6904 13.5 13Z" fill="#A24DE8"/>
-                    <path fill-rule="evenodd" clip-rule="evenodd" d="M2 15C2 16.6569 3.34315 18 5 18H11V20H9C8.44772 20 8 20.4477 8 21C8 21.5523 8.44772 22 9 22H15C15.5523 22 16 21.5523 16 21C16 20.4477 15.5523 20 15 20H13V18H19C20.6569 18 22 16.6569 22 15V5C22 3.34315 20.6569 2 19 2H5C3.34315 2 2 3.34315 2 5V15ZM5 16C4.44772 16 4 15.5523 4 15L4 5C4 4.44772 4.44772 4 5 4L19 4C19.5523 4 20 4.44772 20 5V15C20 15.5523 19.5523 16 19 16H5Z" fill="#A24DE8"/>
-                    </mask>
-                    <g mask="url(#mask0_291_2964)">
-                    <rect width="24" height="24" fill="#A24DE8"/>
-                    </g>
-            </svg>
-            <span>Book a demo</span>
-        </a>
-        <div class="user">
-            <div class="avatar john mini"></div>
-            <span class="regular-text">Constantine</span>
+        <div class="bottom">
+            <a class="book-a-demo">
+                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <mask id="mask0_291_2964" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="2" y="2" width="20" height="20">
+                        <path d="M13.5 13C13.5 12.3096 12.9404 11.75 12.25 11.75C11.5596 11.75 11 12.3096 11 13C11 13.6904 11.5596 14.25 12.25 14.25C12.9404 14.25 13.5 13.6904 13.5 13Z" fill="#A24DE8"/>
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M2 15C2 16.6569 3.34315 18 5 18H11V20H9C8.44772 20 8 20.4477 8 21C8 21.5523 8.44772 22 9 22H15C15.5523 22 16 21.5523 16 21C16 20.4477 15.5523 20 15 20H13V18H19C20.6569 18 22 16.6569 22 15V5C22 3.34315 20.6569 2 19 2H5C3.34315 2 2 3.34315 2 5V15ZM5 16C4.44772 16 4 15.5523 4 15L4 5C4 4.44772 4.44772 4 5 4L19 4C19.5523 4 20 4.44772 20 5V15C20 15.5523 19.5523 16 19 16H5Z" fill="#A24DE8"/>
+                        </mask>
+                        <g mask="url(#mask0_291_2964)">
+                        <rect width="24" height="24" fill="#A24DE8"/>
+                        </g>
+                </svg>
+                <span>Book a demo</span>
+            </a>
+            <div class="user">
+                <div class="avatar john mini"></div>
+                <span class="regular-text">Constantine</span>
+            </div>
         </div>
     </div>
+    <script src="../../js/show-menu.js"></script>
 </body>
 </html>
