--- a/components/popup/index.css
+++ b/components/popup/index.css
@@ -1,3 +1,7 @@
+html, body {
+    height: 100%;
+}
+
 body.lock {
     overflow: hidden;
 }
@@ -8,13 +12,13 @@ body.lock {
     width: 100%;
     height: 100%;
 
-    background-color: rgba(0, 0, 0, 0.8);
+    background: rgba(20, 14, 23, 0.5);
 
     top: 0;
     left: 0;
 
-    opacity: 0;
-    visibility: hidden;
+    opacity: 1;
+    visibility: visible;
 
     transition: all 0.8s ease 0s;
 
@@ -37,53 +41,36 @@ body.lock {
     min-height: 100%;
 
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: flex-end;
+    align-items: flex-start;
 }
 
 .popup__content {
-    width: 765px;
+    width: 30%;
+    min-height: 97vh;
+    margin: 20px 20px 0 0;
+    border-radius: 8px;
+    background-color: #FFFFFF;
+    color: #140E17;
 
-    background-color: #000000;
-
-    padding: 60px;
-
-    font-family: 'Manrope', sans-serif;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 22px;
-    line-height: 32px;
-
-    color: #FFFFFF;
-
-    opacity: 0;
+    opacity: 1;
     transition: all 0.8s ease 0s;
-    transform: translate(0px, -100%);
+    /* transform: translate(0px, -100%); */
 }
 
 .popup__container {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-
-    margin-bottom: 60px;
-}
-
-.popup__container h2 {
-    font-family: 'Fjalla One', sans-serif;
-    font-size: 80px;
-    line-height: 101px;
-    letter-spacing: -0.04em;
+    justify-content: flex-end;
+    padding: 24px;
 }
 
 .popup__close {
-    display: block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
-    width: 42px;
-    height: 42px;
-
-    background-image: url("../images/close-popup.svg");
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center center;
+    width: 40px;
+    height: 40px;
+    background: #F0E2FB;
+    border-radius: 100%;
 }
