--- a/components/inputs/inputs.html
+++ b/components/inputs/inputs.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="../../css/globalStyles.css">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="inputs.css">
     <title>inputs</title>
 </head>
 <body>
-    <div class="container">
+    <div class="container1">
         <div class="div">
             <input class="input" type="text" placeholder="" name="Title" required>
             <label for="input">Title</label>
