--- a/components/navigation bar/menuLinks.html
+++ b/components/navigation bar/menuLinks.html
@@ -11,15 +11,15 @@
     <title>Menu Links</title>
 </head>
 <body>
-    <div class="navigation">
+    <div class="navigation hide">
         <div class="top">
             <div class="logo-full"></div>
             <div class="show-btn">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <mask id="mask0_253_3530" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="4" y="5" width="16" height="14">
-                    <path fill-rule="evenodd" clip-rule="evenodd" d="M11.2682 6.64018C11.6218 6.2159 11.5645 5.58534 11.1402 5.23177C10.7159 4.87821 10.0853 4.93553 9.73178 5.35981L4.73178 11.3598C4.42274 11.7307 4.42274 12.2693 4.73178 12.6402L9.73178 18.6402C10.0853 19.0645 10.7159 19.1218 11.1402 18.7682C11.5645 18.4147 11.6218 17.7841 11.2682 17.3598L6.80171 12L11.2682 6.64018ZM19.2682 6.64018C19.6218 6.21591 19.5645 5.58534 19.1402 5.23178C18.7159 4.87821 18.0853 4.93554 17.7318 5.35982L12.7318 11.3598C12.4227 11.7307 12.4227 12.2693 12.7318 12.6402L17.7318 18.6402C18.0853 19.0645 18.7159 19.1218 19.1402 18.7682C19.5645 18.4147 19.6218 17.7841 19.2682 17.3598L14.8017 12L19.2682 6.64018Z" fill="#A24DE8"/>
+                    <mask id="mask0_253_3538" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="4" y="5" width="16" height="14">
+                    <path fill-rule="evenodd" clip-rule="evenodd" d="M12.7318 6.64018C12.3782 6.2159 12.4356 5.58534 12.8598 5.23177C13.2841 4.87821 13.9147 4.93553 14.2682 5.35981L19.2682 11.3598C19.5773 11.7307 19.5773 12.2693 19.2682 12.6402L14.2682 18.6402C13.9147 19.0645 13.2841 19.1218 12.8598 18.7682C12.4356 18.4147 12.3782 17.7841 12.7318 17.3598L17.1983 12L12.7318 6.64018ZM4.7318 6.64018C4.37824 6.21591 4.43556 5.58534 4.85984 5.23178C5.28412 4.87821 5.91468 4.93554 6.26825 5.35982L11.2682 11.3598C11.5773 11.7307 11.5773 12.2693 11.2682 12.6402L6.26825 18.6402C5.91468 19.0645 5.28412 19.1218 4.85984 18.7682C4.43556 18.4147 4.37824 17.7841 4.7318 17.3598L9.19832 12L4.7318 6.64018Z" fill="#A24DE8"/>
                     </mask>
-                    <g mask="url(#mask0_253_3530)">
+                    <g mask="url(#mask0_253_3538)">
                     <rect width="24" height="24" fill="#A24DE8"/>
                     </g>
                 </svg>
