--- a/components/popover/popover.html
+++ b/components/popover/popover.html
@@ -7,7 +7,7 @@
       <title>popover</title>
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
       <link rel="stylesheet" href="../../css/globalStyles.css">
-      <link rel="stylesheet" href="index.css">
+      <link rel="stylesheet" href="popover.css">
       <style>
          .btn {margin: 5px;}
       </style>
