--- a/components/upload-photo/upload.html
+++ b/components/upload-photo/upload.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="../../css/globalStyles.css">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="upload.css">
 
     <title>Upload Photo</title>
 </head>
@@ -34,8 +34,8 @@
         <div class="loaded-pic">
             <div class="img"></div>
             <div class="instruments">
-                <div class="left btn-link-text">Change photo</div>
-                <div class="right btn-link-text">Remove</div>
+                <a class="left btn-link-text">Change photo</a>
+                <a class="right btn-link-text">Remove</a>
             </div>
         </div>
 
@@ -74,15 +74,15 @@
         <div class="loaded-photo">
             <div class="photo"></div>
             <div class="instruments">
-                <div class="left btn-link-text">Change photo</div>
-                <div class="right btn-link-text">Remove</div>
+                <a class="left btn-link-text link-purple">Change photo</a>
+                <a class="right btn-link-text link-purple">Remove</a>
             </div>
         </div>
         <div class="loaded-photo mini">
             <div class="photo"></div>
             <div class="instruments">
-                <div class="left btn-link-text">Change photo</div>
-                <div class="right btn-link-text">Remove</div>
+                <a class="left btn-link-text">Change photo</a>
+                <a class="right btn-link-text">Remove</a>
             </div>
         </div>
     </div>
