--- a/components/alerts/alerts.css
+++ b/components/alerts/alerts.css
@@ -10,7 +10,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 600px;
+    width: fit-content;
     padding: 20px 20px;
     border-radius: 8px;
 
