--- a/components/alerts/alerts.html
+++ b/components/alerts/alerts.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <link rel="stylesheet" href="../../css/globalStyles.css">
-    <link rel="stylesheet" href="index.css">
-    <title>messages</title>
+    <link rel="stylesheet" href="alerts.css">
+    <title>alerts</title>
 </head>
 <body>
     <div class="div">
