--- a/components/checkboxes/checkboxes.html
+++ b/components/checkboxes/checkboxes.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="../../css/globalStyles.css">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="checkboxes.css">
     <title>checkboxes</title>
 </head>
 <body>
