--- a/components/inputs/inputs.css
+++ b/components/inputs/inputs.css
@@ -1,4 +1,4 @@
-.container {
+.container1 {
     display: flex;
     align-items: center;
 }
@@ -27,7 +27,7 @@ label {
     left: 16px;
     color: #A2A2A2;
     font-weight: 600;
-    font-size: 14px;
+    font-size: 16px;
     line-height: 20px;
     letter-spacing: 0.03em;
 
@@ -45,6 +45,7 @@ label {
 
 .input:focus + label {
     top: 15px;
+    font-size: 14px;
     text-transform: uppercase;
 }
 
