--- a/components/navigation bar/menuLinks.css
+++ b/components/navigation bar/menuLinks.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     justify-content: space-between;
     max-width: 400px;
-    height: 96vh;
+    height: 100%;
 }
 
 .navigation.hide {
@@ -11,7 +11,7 @@
 }
 
 .navigation .top {
-    padding: 25px 30px;
+    padding: 25px 30px 0 30px;
 }
 
 .hide .top {
@@ -83,7 +83,7 @@
 }
 
 .navigation__list {
-    margin-top: 30px;
+    margin-top: 80px;
     margin-bottom: auto;
 }
 
@@ -92,7 +92,7 @@
 }
 
 .hide .navigation__list-item {
-    padding: 35px 35px;
+    padding: 28px 42px;
 }
 
 .navigation__list-item {
@@ -100,7 +100,7 @@
     align-items: center;
     transition: all 0.2s ease;
     cursor: pointer;
-    padding: 0 40px;
+    padding: 40px 40px;
 }
 
 .navigation__list-item h4 {
@@ -159,7 +159,7 @@
 }
 
 .hide .book-a-demo {
-    width: 20%;
+    width: 60%;
 }
 
 .book-a-demo span {
@@ -181,6 +181,10 @@
     transition: all 0.3s ease;
 }
 
+.hide .user {
+    justify-content: center;
+}
+
 .user:hover {
     background-color: #EEEEEE;
 }
@@ -193,4 +197,8 @@
 
 .user .avatar {
     margin-right: 16px;
+}
+
+.hide .user .avatar {
+    margin-right: 0;
 }
