--- a/components/navigation bar/navi mobile/index.html
+++ b/components/navigation bar/navi mobile/index.html
@@ -12,13 +12,13 @@
     <title>navi mobile</title>
 </head>
 <body>
-    <header>
+    <div class="header">
         <div class="logo-mini"></div>
         <div class="menu-btn">
             <span></span>
             <span></span>
         </div>
-    </header>
+    </div>
     <div class="menu">
         <nav class="navigation__list">
             <li class="navigation__list-item">
