--- a/components/navigation bar/navi mobile/index.css
+++ b/components/navigation bar/navi mobile/index.css
@@ -1,5 +1,6 @@
-@media (max-width: 375px) {
-	header {
+@media (max-width: 500px) {
+	.header {
+		width: 100%;
 		display: flex;
 		justify-content: space-between;
 		padding: 12px 15px;
@@ -21,7 +22,7 @@
 		left: 50%;
 		transform: translate(-50%, -50%);
 		background-color: #140E17;
-		transition: all 0.5s;
+		transition: all 0.3s;
 	}
 	
 	.menu-btn span:nth-of-type(1) {
@@ -34,18 +35,25 @@
 	
 	.menu {
 		position: fixed;
+		display: flex;
+		flex-direction: column;
+		justify-content: space-between;
 		top: 0;
 		left: 0;
 		width: 100%;
-		height: 100%;
+		height: 90vh;
 		margin-top: 64px;
 		background: #FFFFFF;
 		opacity: 0;
-		transition: all 0.5s ease; 
+		z-index: 9999;
+		visibility: hidden;
+		transition: all 0.3s ease; 
 	}
+
 	.menu.menuActive {
 		opacity: 1;
-		margin-top: 100px;
+		visibility: visible;
+		margin-top: 90px;
 	}
 	
 	.menu-btn.menuActive span:nth-of-type(1) {
