--- a/components/navigation bar/navi mobile/index.css
+++ b/components/navigation bar/navi mobile/index.css
@@ -41,7 +41,7 @@
 		top: 0;
 		left: 0;
 		width: 100%;
-		height: 90vh;
+		height: 100%;
 		margin-top: 64px;
 		background: #FFFFFF;
 		opacity: 0;
