--- a/components/date&time/index.html
+++ b/components/date&time/index.html
@@ -12,7 +12,12 @@
 <body>
     <div class="div">
         <div>
-            <span class="regular-text gray-600">00:00 am -> 00:00 pm</span>
+            <span class="regular-text gray-600">00:00 am
+                <svg width="12" height="8" viewBox="0 0 12 8" fill="#140E17" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M0.24 4.624V3.28H9.56L7.256 0.976L8.072 0.144L11.888 3.96L8.072 7.776L7.256 6.944L9.576 4.624H0.24Z"/>
+                </svg>
+                00:00 pm
+            </span>
         </div>
         <!-- With arrow -->
         <div class="time">
