--- a/components/navigation bar/menuLinks.html
+++ b/components/navigation bar/menuLinks.html
@@ -81,6 +81,7 @@
                 <span class="regular-text">Constantine</span>
             </div>
         </div>
+        <div class="line"></div>
     </div>
     <script src="../../js/show-menu.js"></script>
 </body>
