--- a/components/buttons/buttons.css
+++ b/components/buttons/buttons.css
@@ -6,7 +6,7 @@
     border: none;
     color: #FFFFFF;
     font-weight: 700;
-
+    font-family: "Manrope", sans-serif;
     font-size: 16px;
     line-height: 24px;
 
