--- a/components/navigation bar/menuLinks.css
+++ b/components/navigation bar/menuLinks.css
@@ -1,4 +1,5 @@
 .navigation {
+    position: absolute;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -12,6 +13,16 @@
 
 .navigation .top {
     padding: 25px 30px;
+}
+
+.navigation .line {
+    position: absolute;
+    right: -1px;
+    top: 0;
+    height: 100%;
+    width: 1px;
+    background-color: var(--gray-400);
+
 }
 
 .hide .top {
