--- a/components/popup/popup.css
+++ b/components/popup/popup.css
@@ -8,20 +8,14 @@ body.lock {
 
 .popup {
     position: fixed;
-
     width: 100%;
     height: 100%;
-
     background: rgba(20, 14, 23, 0.5);
-
     top: 0;
     left: 0;
-
-    opacity: 1;
-    visibility: visible;
-
+    opacity: 0;
+    visibility: hidden;
     transition: all 0.8s ease 0s;
-
     overflow-y: auto;
     overflow-x: hidden;
 }
@@ -29,7 +23,6 @@ body.lock {
 .popup.open {
     opacity: 1;
     visibility: visible;
-    z-index: 999;
 }
 
 .popup.open .popup__content {
@@ -53,7 +46,7 @@ body.lock {
     background-color: #FFFFFF;
     color: #140E17;
 
-    opacity: 1;
+    opacity: 0;
     transition: all 0.8s ease 0s;
     /* transform: translate(0px, -100%); */
 }
