--- a/pages/SignUpSignIn/RecoveryPassword/index.css
+++ b/pages/SignUpSignIn/RecoveryPassword/index.css
@@ -13,15 +13,15 @@ aside .side-menu .recover-wrap.visible {
 aside .side-menu .title {
     margin: 0 0 14px 0;
     font-weight: 500;
-    font-size: 37px;
-    line-height: 50px;
+    font-size: 40px;
+    line-height: 48px;
 }
 
 aside .side-menu .description {
     max-width: 380px;
     margin: 0 0 14px 0;
     font-weight: 600;
-    font-size: 15px;
+    font-size: 16px;
     line-height: 24px;
     color: var(--gray-600);
 }
@@ -30,8 +30,9 @@ aside .side-menu .container-recovery .text-field {
     margin-bottom: 16px;
 }
 
-aside .side-menu .container-recovery .btn {
+aside .side-menu .btn {
     margin-bottom: 40px;
+    font-size: 16px;
 }
 
 aside .side-menu .container-recovery .bottom-recovery {
@@ -41,14 +42,9 @@ aside .side-menu .container-recovery .bottom-recovery {
 aside .side-menu .bottom-title {
     margin: 0 0 16px 0;
     padding-top: 17px;
-    font-weight: 700;
-    font-size: 22px;
+    font-weight: 600;
+    font-size: 24px;
     line-height: 28px;
-}
-
-aside .side-menu .bottom-link {
-    font-size: 15px;
-    line-height: 24px;
 }
 
 /*Reset password*/
@@ -60,6 +56,11 @@ aside .side-menu .reset-password-btn {
 
 aside .side-menu .container-reset .container-resend-folder {
     border-top: 1px solid var(--gray-400);
+}
+
+aside .side-menu .text-field_floating .text-field__label,
+aside .side-menu .text-field_floating .text-field__label-error {
+    font-size: 16px;
 }
 
 /*Modal reset password*/
@@ -145,7 +146,7 @@ aside .side-menu .container-reset .container-resend-folder {
 
 .reset-password-modal .footer-description {
     margin-bottom: 18px;
-    font-size: 11px;
+    font-size: 12px;
     line-height: 13px;
 }
 
@@ -195,23 +196,20 @@ aside .side-menu .container-reset .container-resend-folder {
 }
 
 .side-menu .container-change-pass .change-password-description {
-    margin-bottom: 37px;
+    margin-bottom: 40px;
 }
 
-@media screen and (min-width: 1280px) and (max-width: 1919px){
+@media screen and (max-width: 1919px){
 
     /*Change-password-screen*/
 
     .side-menu .container-change-pass .change-password-title {
-        margin-bottom: 5px;
+        margin-bottom: 6px;
     }
 
-    .side-menu .container-change-pass .change-password-description {
-        margin-bottom: 38px;
-    }
 }
 
-@media screen and (min-width: 1080px) and (max-width: 1279px) {
+@media screen and (max-width: 1279px) {
 
     /*Recovery screen*/
 
@@ -220,7 +218,7 @@ aside .side-menu .container-reset .container-resend-folder {
     }
 }
 
-@media screen and (min-width: 375px) and (max-width: 1079px) {
+@media screen and (max-width: 1079px) {
 
     aside .logo-full {
         margin-bottom: 37px;
@@ -229,25 +227,27 @@ aside .side-menu .container-reset .container-resend-folder {
     aside .side-menu .title {
         margin-bottom: 6px;
         font-weight: 600;
-        font-size: 22px;
+        font-size: 24px;
         line-height: 28px;
     }
 
     aside .side-menu .description {
-        font-size: 13px;
+        max-width: none;
+        margin-bottom: 16px;
+        font-size: 14px;
         line-height: 20px;
     }
 
     aside .side-menu .bottom-title {
         padding-top: 20px;
-        margin-bottom: 13px;
+        margin-bottom: 14px;
         font-weight: 600;
-        font-size: 19px;
+        font-size: 20px;
         line-height: 24px;
     }
 
     aside .side-menu .bottom-link {
-        font-size: 13px;
+        font-size: 16px;
     }
 
     /*Reset password*/
@@ -268,17 +268,22 @@ aside .side-menu .container-reset .container-resend-folder {
 
     .container-reset-form .password-description {
         margin: 4px 20px 0 9px;
-        font-size: 11px;
+        font-size: 12px;
         line-height: 16px;
     }
 
-    .btn {
-        font-size: 13px;
+    aside .side-menu .container-recovery .btn {
         margin-top: 8px;
+        font-size: 14px;
     }
 
     .side-menu .container-change-pass .change-password-description {
         margin-bottom: 13px;
+    }
+
+    aside .side-menu .text-field_floating .text-field__label,
+    aside .side-menu .text-field_floating .text-field__label-error {
+         font-size: 14px;
     }
 }
 
