--- a/pages/SignUpSignIn/index.css
+++ b/pages/SignUpSignIn/index.css
@@ -11,6 +11,7 @@ main {
 /*Navigation*/
 
 main .navigation {
+    position: fixed;
     top: 0;
     left: 0;
     height: 100vh;
@@ -37,7 +38,7 @@ main .container-content .content {
 
 aside {
     min-width: 448px;
-    height: 100vh;
+    min-height: 100vh;
     padding: 20px 20px 20px 0;
 }
 
@@ -88,7 +89,7 @@ aside .side-menu .btn-wrap .button-active {
     display: block;
     width: 100%;
     height: 72px;
-    padding: 36px 14px 12px 14px;
+    padding: 36px 40px 12px 14px;
     border: 1px solid var(--gray-400);
     border-radius: 8px;
     -webkit-appearance: none;
@@ -129,11 +130,11 @@ aside .side-menu .btn-wrap .button-active {
 .text-field_floating .text-field__label-error {
     position: absolute;
     top: 25px;
-    left: 14px;
+    left: 16px;
     height: 100%;
     pointer-events: none;
     transform-origin: 0 0;
-    transition: opacity .15s ease-in-out, transform .15s ease-in-out;
+    transition: all .15s ease-in-out;
     color: #9E9E9E;
     font-weight: 600;
     font-size: 18px;
@@ -141,13 +142,14 @@ aside .side-menu .btn-wrap .button-active {
 }
 
 .icon-password {
-    display: none;
+    display: flex;
     position: absolute;
-    top: 36px;
+    top: 25px;
     right: 16px;
     width: 24px;
     height: 24px;
     align-items: center;
+    transition: all .15s ease-in-out;
 }
 
 .icon-password.eye-open .icon-eye-close {
@@ -187,11 +189,6 @@ aside .side-menu .btn-wrap .button-active {
     color: transparent;
 }
 
-.text-field_floating .text-field__input:focus,
-.text-field_floating .text-field__input:not(:placeholder-shown) {
-
-}
-
 .text-field_floating .text-field__input:focus~.text-field__label,
 .text-field_floating .text-field__input:not(:placeholder-shown)~.text-field__label,
 .text-field_floating .text-field__input:focus~.text-field__label-error,
@@ -199,13 +196,14 @@ aside .side-menu .btn-wrap .button-active {
     transform: translateY(-14px);
     font-size: 14px;
     line-height: 20px;
+    text-transform: uppercase;
 }
 
 .text-field_floating .text-field__input:focus~.text-field__label + .icon-password,
 .text-field_floating .text-field__input:not(:placeholder-shown)~.text-field__label + .icon-password,
 .text-field_floating .text-field__input:focus~.text-field__label-error + .icon-password,
 .text-field_floating .text-field__input:not(:placeholder-shown)~.text-field__label-error + .icon-password {
-    display: flex;
+    transform: translateY(11px);
 }
 
 form .text-field {
@@ -217,7 +215,7 @@ form .text-field .password-description {
     margin: 4px 0 0 16px;
     color: var(--gray-600);
     font-weight: 600;
-    font-size: 14px;
+    font-size: 16px;
     line-height: 20px;
 }
 
@@ -257,7 +255,7 @@ form .form-bottom {
 .btn {
     margin-bottom: 35px;
     padding: 24px;
-    font-size: 16px;
+    font-size: 18px;;
 }
 
 /*Google auth*/
@@ -276,7 +274,7 @@ form .form-bottom {
 }
 
 .google-link-wrap .google-link {
-    width: 67%;
+    width: 254px;
     padding: 16px 14px;
     font-size: 17px;
     border: 1px solid var(--gray-400);
@@ -313,6 +311,9 @@ form .form-bottom {
 
 .form-log-in .link-forgot-password {
     margin-bottom: 27px;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 24px;
 }
 
 .form-log-in .btn {
@@ -339,7 +340,7 @@ form .form-bottom {
 
 .form-log-in .error-message .error-description {
     font-weight: 600;
-    font-size: 15px;
+    font-size: 16px;
     line-height: 20px;
 }
 
@@ -352,14 +353,13 @@ aside .side-menu.verify-menu.side-active {
 
 aside .side-menu .verify-title {
     margin: 0 0 8px 0;
-    font-size: 37px;
 }
 
 aside .side-menu .verify-description {
     max-width: 380px;
     margin: 0 0 16px 0;
     font-weight: 600;
-    font-size: 17px;
+    font-size: 18px;
     line-height: 24px;
     color: var(--gray-700);
 }
@@ -384,11 +384,15 @@ aside .side-menu .wrong-email {
     border-top: 1px solid var(--gray-400);
 }
 
+aside .side-menu .resend-message .link {
+    font-size: 18px;
+}
+
 aside .side-menu .resend-message .resend-title,
 aside .side-menu .wrong-email .wrong-title {
     margin: 0 0 16px 0;
-    font-weight: 700;
-    font-size: 22px;
+    font-weight: 600;
+    font-size: 24px;
     line-height: 28px;
 }
 
@@ -452,7 +456,19 @@ aside .side-menu .wrong-email .wrong-title {
     border-color: var(--gray-600);
 }
 
-@media screen and (min-width: 1280px) and (max-width: 1919px) {
+.container-modal .modal-window .div {
+    margin-bottom: 44px;
+}
+
+.container-modal .modal-window .div .custom-checkbox + label{
+    font-size: 16px;
+}
+
+.container-modal .modal-window .btn {
+    font-size: 16px;
+}
+
+@media screen and (max-width: 1919px) {
 
     /*Navigation*/
 
@@ -495,11 +511,11 @@ aside .side-menu .wrong-email .wrong-title {
     /*Verify-menu*/
 
     aside .side-menu .verify-title {
-        margin-right: 100px;
+        margin-right: 84px;
     }
 }
 
-@media screen and (min-width: 1080px) and (max-width: 1279px)  {
+@media screen and (max-width: 1279px)  {
     /*Aside*/
 
     aside {
@@ -513,11 +529,18 @@ aside .side-menu .wrong-email .wrong-title {
     /*Google auth*/
 
     .google-link-wrap .google-link {
-        width: 74%;
+        width: 254px;
     }
+
+    /*Verify*/
+
+    aside .side-menu .verify-title {
+        margin-right: 1px;
+    }
+
 }
 
-@media screen and (min-width: 375px) and (max-width: 1079px)  {
+@media screen and (max-width: 1079px)  {
 
     main {
         padding: 0;
@@ -535,7 +558,7 @@ aside .side-menu .wrong-email .wrong-title {
 
     aside {
         min-width: 100%;
-        padding: 16px 15px;
+        padding: 26px 15px;
     }
 
     aside .side-menu {
@@ -547,6 +570,11 @@ aside .side-menu .wrong-email .wrong-title {
         align-self: center;
         height: 24px;
         margin-bottom: 25px;
+    }
+
+    aside .side-menu .recover-wrap .btn {
+        margin-top: 8px;
+        font-size: 14px;
     }
 
     aside .side-menu .btn-wrap {
@@ -566,13 +594,37 @@ aside .side-menu .wrong-email .wrong-title {
     .text-field_floating .text-field__label,
     .text-field_floating .text-field__label-error {
         top: 20px;
-        left: 8px;
+        left: 10px;
         font-size: 16px;
         line-height: 20px;
     }
 
     .text-field__input {
         height: 60px;
+    }
+
+    .icon-password {
+        top: 22px;
+        right: 12px;
+        width: 20px;
+        height: 20px;
+    }
+
+    .icon-password img {
+        width: 20px;
+        height: 20px;
+    }
+
+    .text-field_floating .text-field__input:focus~.text-field__label + .icon-password,
+    .text-field_floating .text-field__input:not(:placeholder-shown)~.text-field__label + .icon-password,
+    .text-field_floating .text-field__input:focus~.text-field__label-error + .icon-password,
+    .text-field_floating .text-field__input:not(:placeholder-shown)~.text-field__label-error + .icon-password {
+        transform: translateY(10px);
+    }
+
+    .icon-password svg {
+        height: 20px;
+        width: 20px;
     }
 
     form .text-field {
@@ -586,7 +638,7 @@ aside .side-menu .wrong-email .wrong-title {
     }
 
     form .form-bottom {
-        margin-top: 24px;
+        margin-top: 26px;
     }
 
     /*Checkbox*/
@@ -601,8 +653,9 @@ aside .side-menu .wrong-email .wrong-title {
     }
 
     .div .custom-checkbox + label {
-        font-size: 15px;
-        line-height: 20px
+        font-size: 16px;
+        line-height: 20px;
+        font-weight: 600;
     }
 
     .div {
@@ -614,14 +667,15 @@ aside .side-menu .wrong-email .wrong-title {
     .btn {
         padding: 16px;
         margin-bottom: 24px;
+        font-size: 16px;
         line-height: 20px;
     }
 
     /*Google auth*/
 
     .google-title {
-        margin-bottom: 14px;
-        font-size: 14px;
+        margin-bottom: 12px;
+        font-size: 16px;
     }
 
     .google-link-wrap .icon svg {
@@ -630,7 +684,7 @@ aside .side-menu .wrong-email .wrong-title {
     }
 
     .google-link-wrap .google-link {
-        width: 70%;
+        width: 219px;
         font-size: 15px;
     }
 
@@ -644,34 +698,31 @@ aside .side-menu .wrong-email .wrong-title {
 
     .form-log-in .link-forgot-password {
         margin-bottom: 23px;
+        font-size: 16px;
+        line-height: 20px;
     }
 
     .form-log-in .btn {
-        padding: 16px;
         margin-bottom: 28px;
-        line-height: 20px;
     }
 
     /*Verify*/
 
     aside .side-menu .verify-title {
-        font-size: 22px;
+        font-size: 24px;
         line-height: 28px;
     }
 
     aside .side-menu .verify-description {
-        font-size: 15px;
-        line-height: 20px;
-    }
-
-    aside .btn-with-email {
-        padding: 16px 10px;
         font-size: 16px;
         line-height: 20px;
     }
 
     aside .btn-with-email {
+        padding: 16px 10px;
         margin-bottom: 60px;
+        font-size: 16px;
+        line-height: 20px;
     }
 
     aside .side-menu .resend-message, aside .side-menu .wrong-email {
@@ -679,11 +730,15 @@ aside .side-menu .wrong-email .wrong-title {
         margin-bottom: 38px;
     }
 
+    aside .side-menu .resend-message .link {
+        font-size: 16px;
+    }
+
     aside .side-menu .resend-message .resend-title,
     aside .side-menu .wrong-email .wrong-title  {
         margin-bottom: 15px;
         font-weight: 600;
-        font-size: 19px;
+        font-size: 20px;
         line-height: 24px;
     }
 
@@ -695,29 +750,28 @@ aside .side-menu .wrong-email .wrong-title {
     }
 
     .container-modal .modal-window .modal-header .modal-title {
-        width: 74%;
         margin-bottom: 18px;
         font-size: 22px;
         line-height: 28px;
     }
 
-    .container-modal .div .custom-checkbox + label {
+    .container-modal .modal-window .div .custom-checkbox + label {
         font-size: 13px;
     }
 
-    .container-modal .div .custom-checkbox + label:before {
+    .container-modal .modal-window .div .custom-checkbox + label:before {
         width: 14px;
         height: 14px;
         margin-right: 14px;
     }
 
-    .container-modal .div {
+    .container-modal .modal-window .div {
         margin-bottom: 34px;
     }
 
-    .container-modal .btn {
+    .container-modal .modal-window .btn {
         padding: 26px;
-        font-size: 13px;
+        font-size: 14px;
         line-height: 20px;
     }
 }
