--- a/components/popup/popup.css
+++ b/components/popup/popup.css
@@ -48,7 +48,7 @@ body.lock {
 
     opacity: 0;
     transition: all 0.8s ease 0s;
-    /* transform: translate(0px, -100%); */
+    transform: translate(0px, -100%);
 }
 
 .popup__container {
