--- a/pages/profile/profile.css
+++ b/pages/profile/profile.css
@@ -166,6 +166,107 @@
     width: 100%;
 }
 
+/* Modal Window */
+
+.popup__container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.popup__body {
+    min-height: 100%;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.popup__content {
+    width: 40%;
+    min-height: fit-content;
+}
+
+.popup__container {
+    display: flex;
+    justify-content: center;
+    padding: 40px 32px;
+}
+
+.popup__top {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0 16px;
+    margin-bottom: 72px;
+}
+
+.popup__top .popup__link {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 14px;
+    text-align: center;
+    text-decoration-line: underline;
+    color: #777777;
+    margin-bottom: 16px;
+}
+
+.popup__top .logo-full {
+    margin-bottom: 56px;
+}
+
+.popup__top .text {
+    margin-bottom: 24px;
+}
+
+.popup__top .text p:nth-child(1) {
+    margin-bottom: 16px;
+}
+
+.popup__top .text p {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 114%;
+    color: #101010;
+    text-align: left;
+}
+
+.popup__top .btn-link{
+    display: block;
+    text-align: center;
+    color: #FFFFFF;
+    background: #A24DE8;
+    border-radius: 8px;
+    padding: 24px 0;
+    width: 100%;
+}
+
+.popup__bottom {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.popup__bottom span {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 150%;
+    text-align: center;
+    color: #6A6A69;
+}
+
+.popup__bottom .bottom-primary-link {
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 150%;
+    color: #A24DE8;
+
+    margin-bottom: 48px;
+}
+
 @media (max-width: 1285px) {
 
     .wrapper .container .content .left-side {
