--- a/components/navigation bar/menuLinks.css
+++ b/components/navigation bar/menuLinks.css
@@ -4,6 +4,7 @@
     justify-content: space-between;
     max-width: 400px;
     height: 100%;
+    border-right: 1px solid #DDDDDD;
 }
 
 .navigation.hide {
@@ -22,8 +23,8 @@
 
 .logo-full {
     width: 319px;
-    height: 40px;
-    margin-bottom: 40px;
+    height: 48px;
+    margin-bottom: 60px;
 }
 
 .hide .logo-full {
@@ -45,6 +46,7 @@
     background-color: #F0E2FB;
     transition: all 0.2s ease;
     cursor: pointer;
+    transition: all 0.3s ease;
 }
 
 .show-btn.hide {
@@ -92,7 +94,7 @@
 }
 
 .hide .navigation__list-item {
-    padding: 28px 42px;
+    padding: 32px 42px;
 }
 
 .navigation__list-item {
@@ -100,7 +102,7 @@
     align-items: center;
     transition: all 0.2s ease;
     cursor: pointer;
-    padding: 40px 40px;
+    padding: 28px 42px;
 }
 
 .navigation__list-item h4 {
