--- a/pages/admin/admin.css
+++ b/pages/admin/admin.css
@@ -6,3 +6,198 @@
 .wrapper .navigation-mobile {
     display: none;
 }
+
+/* Container with content */
+
+.background-container {
+    width: 100%;
+    padding: 20px 20px 0 20px;
+}
+
+.container-content {
+    width: 65%;
+    height: 100vh;
+    background: #E6E6E6;
+    border-radius: 8px 8px 0px 0px;
+    padding: 40px 40px 0 40px;
+}
+
+.container-content .information {
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-between;
+    margin-bottom: 30px;
+}
+
+.container-content .information .time {
+    font-weight: 500;
+    font-size: 64px;
+    line-height: 64px;
+    color: #140E17;
+}
+
+.container-content .information .date {
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 24px;
+    color: #9E9E9E;
+    margin-right: auto;
+    margin-left: 24px;
+}
+
+.events-wrapper {
+    width: 100%;
+}
+
+.snippet {
+    display: flex;
+    position: relative;
+    justify-content: flex-end;
+    width: 100%;
+    height: 219px;
+    margin-bottom: 12px;
+}
+
+.snippet .snippet-time {
+    position: absolute;
+    top: -9px;
+    left: 0;
+    width: fit-content;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 20px;
+    text-align: right;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #A2A2A2;
+
+}
+
+.snippet-event-container {
+    margin-left: 20px;
+    width: 95%;
+    border-top: 1px solid #CECECE;
+    padding-top: 8px;
+}
+
+.snippet .event-card {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    background-color: #FFFFFF;
+    border-radius: 8px;
+    padding: 24px;
+}
+
+.snippet .event-card.active {
+    border: 1px solid #A24DE8;
+}
+
+.snippet .event-card .card-top {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.snippet .event-card .card-top .event-name {
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 24px;
+    color: #140E17;
+}
+
+.snippet .event-card .card-top .time-counter {
+    display: flex;
+    align-items: center;
+    margin-left: 20px;
+    margin-right: auto;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 20px;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #E22929;
+}
+
+.snippet .event-card .card-top .time-counter .live {
+    background-color: #E22929;
+    color: #FFFFFF;
+    padding: 4px;
+    border-radius: 4px;
+    margin-right: 8px;
+}
+
+.snippet .event-card .card-top .join-link {
+    display: block;
+    background-color: #A24DE8;
+    color: #FFFFFF;
+    border-radius: 4px;
+    padding: 8px 12px;
+}
+
+.snippet .event-card .card-bottom {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.snippet .event-card .card-bottom .duration {
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 24px;
+    color: #A2A2A2;
+}
+
+.snippet .event-card .card-bottom .duration .arrow {
+    margin: 0 8px;
+}
+
+.snippet .event-card .card-bottom .participants {
+    display: flex;
+}
+
+.snippet .event-card .card-bottom .participant-avatar {
+    width: 40px;
+    height: 40px;
+    border-radius: 1000px;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.snippet .event-card .card-bottom .participant-avatar.user-john {
+    background-image: url("../../images/john.png");
+}
+
+.snippet .event-card .card-bottom .participant-avatar:not(:last-child) {
+    margin-right: 4px;
+}
+
+.snippet .event-card .card-bottom .more-participants {
+    width: 40px;
+    height: 40px;
+    border-radius: 1000px;
+    background-color: #EEEEEE;
+    color: #A2A2A2;
+    font-weight: 700;
+    font-size: 12px;
+    line-height: 16px;
+    text-align: center;
+    letter-spacing: 0.05em;
+    text-transform: uppercase;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/* If Event even not started */
+
+.snippet .event-card.not-started .time-counter{
+    display: none;
+}
+
+.snippet .event-card.not-started .join-link{
+    display: none;
+}
